app/assets/stylesheets/application.scss
/* Import all of Bootstrap's Css Components */

@import "reset.css";
@import "bootstrap-sprockets";
@import "bootstrap";

@import "font-awesome";
@import "responsive.scss";

@import "admin/application";
@import "reference_genomes";
@import "libraries";
@import "plates";
@import "sequencing_library_prep_kits";
@import "barcode_sequencing_results.scss" ;

//@import "sequencing_results";

@media (max-width: $screen-xs-min) {
	body {
		font-size: 1.0em;
	}
}

@media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
	body {
		font-size: 1.4em;
	}
}

@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
	body {
		font-size: 1.4em;
	}
}


@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
	body {
		font-size: 1.4em;
	}
}

@media (min-width: $screen-lg-min) {
	body {
		font-size: 1.4em;
	}
}

table.attributes i.fa-pencil {
	margin-right: 1em;
}

label.radio_buttons {
	margin-right: 15px;
}

/* the .form-group is the class rails/simple-form gives to inputs. */
.form-group {
	max-width: 50%;
}


select:focus, input:focus, textarea:focus {
  background-color: #FFFFCC; 
}

#app-title {
  font-size: 1.3em;
}

#topleft-nav {
	li.encode-logo a {
		margin: 0;
		padding: 0;
		img {
			background-color: white;
			height: $navbar-height;
		}
	}
 .active a {
		background-color: #8C1515;
	} 
	a:hover {
		background-color: rgba(0,0,0,0.2);
	}
}

#sign-out-btn {
	a:hover {
		background-color: rgba(0,0,0,0.2);
	}
}

.navbar-fixed-top {
  background-color: #8C1515;
  .container-fluid .navbar-header span, .container-fluid .collapse li a, .navbar-right span {
    color: #fbfbf9;
  }
  i {
    color: #fbfbf9;
  }
}

html {
  height: 100%;

  body {
    height: 100%;
  }
}

body { 
  padding-top: $navbar-height;
}

#footer {
  width: 100%;
  max-width: 100%;
  padding: 0;
  margin: 0;
  font-size: 0.8em;

  .navbar-right {
    margin: 0;
    padding: 0;
  }
}

#main {
	height: 100%;
	padding-top: $navbar-height;
}

#sidebar {
  margin: 0;
  .navbar-fixed-side {
    padding: 0;
    margin: 0;
  }

  ul {
		margin-top: 0.5em;
		&:last-child {
			padding-bottom: 1.0em;
		}
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 0;
    padding-bottom: 0; 
    a { 
      font-size: 0.8em;
    }
  }
}

.data-container {
  padding-right: 1em;
}

header {
  @extend .page-header;
  position: relative;
  padding-bottom: 0px;
  
  &:first-child {
    margin-top: 20px;
  }
}

#meta_attributes {
  border: 1px solid grey;
  @extend .table;
  @extend .table-condensed;
  width: 65%;

  th {
    width: 35%;
  }

  tr:first-child {
    td, th {
      border-top: 0px;
    }
  }

  td, th {
    line-height: 24px !important;
  }
}

.attributes,.table-data {
  @extend .table;
  @extend .table-hover;
  @extend .table-condensed;
  @extend .table-responsive;

  tr:first-child {
    td, th {
      border-top: 0px;
    }
	}

	td, th {
		text-align: center;
  }

  td, th {
    line-height: 24px !important;
  }
}

.plate-table {
	/* see additional styles selecting elements in this table in plates.js.coffee */
	@extend .table-data;
	td {
		border: 1px solid;
	}
}

#barcode_results {
	@extend .attributes;
	thead {
		font-weight: bold;
		color: white;
		background-color: #3a4749;
		opacity: 0.7;
	}
}

ul.actions {
  @extend .list-unstyled;
  @extend .list-inline;
/* sometimes the buttons may stack up if zoomed in too much, so add some bottom margin: */
	& a {
		 margin-bottom: 8px;
	}
}

a.new, a.edit, a.delete {
  @extend .btn;
  &:before {
    font-family: "FontAwesome";
    padding-right: 0.5em;
  }
}

.reg-btn {
	@extend .btn;
	@extend .btn-default;
	background-color: #DCDCDC;
}

a.new {
  @extend .btn-success;

  &:before {
    @extend .fa-plus;
  }
}

a.edit {
  @extend .btn-primary;

  &:before {
    @extend .fa-pencil;
  }
}

a.delete {
  @extend .btn-danger;

  &:before {
    @extend .fa-trash;
  }
}

.alert-notice {
  @extend .alert-success;
}

.alert-alert {
  @extend .alert-danger;
}

form {
  max-width: 85%;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff;
  }
  ul li {
    font-size: 12px;
    list-style: square;
  }
}

